--- a/26_Como_Avaliar_um_Modelo_de_Machine_Learning.ipynb
+++ b/26_Como_Avaliar_um_Modelo_de_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrStvUexR7sEG9lHVHERPb",
+      "authorship_tag": "ABX9TyMywDl6KpdG8VEJ2eRRWIX3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -344,6 +344,36 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Introdução: Como avaliar um modelo de Machine Learning**\n",
+        "\n",
+        "\n",
+        "Modelos de Regressão buscam prever um valor numérico contínuo. Por exemplo, qual o preço de venda de um imóvel ou qual o faturamento esperado para o próximo mês.\n",
+        "\n",
+        "Quando estamos usando o dataset de teste, fazemos a previsão 𝑦̂ 𝑖 para a 𝑖-ésima linha, uma vez que também temos o valor real 𝑦𝑖, podemos calcular esse erro de diferentes formas.\n",
+        "\n",
+        "<center><img width=\"50%\" src=\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/img/regressao_loss.png\"></center>\n",
+        "\n",
+        "Na imagem acima, considere que a reta representa o seu modelo de regressão, ou seja, a própria previsão. Cada seta (vetor) representa a diferença entre o valor real e a previsão.\n",
+        "\n",
+        "Em outras palavras, cada seta representa o quanto você errou naquela previsão específica. Se você medir todas as distâncias entre os pontos e a reta (que é o seu modelo), você vai ter o seu erro, ou loss.\n",
+        "\n",
+        "No exemplo dessa figura, fica bem claro que o modelo do plot da esquerda \"erra\" bem mais que o plot do modelo da direita. Ou seja, o modelo da direita é melhor.\n",
+        "\n",
+        "Na verdade, existem diversas métricas que podem ser utilizadas para verificar o desempenho do seu modelo. Nesta aula, iremos conhecer as métricas MAE, MSE, RMSE e R-Squared\n",
+        "\n",
+        "Como se avalia um modelo de classificação?\n",
+        "Seja trabalhando com classificação binária ou com diversas classes, as métricas relacionadas a modelos de classificação não podem ser os mesmos que usamos em modelos de regressão.\n",
+        "\n",
+        "Nesta aula veremos também as métricas acurácia, precisão, recall e como plotar uma matriz de confusão.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aWTXwcETIsCa"
+      }
     },
     {
       "cell_type": "markdown",
