--- a/28_Decision_Trees.ipynb
+++ b/28_Decision_Trees.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmi4Q7yc/fRqnj5dWZpAg+",
+      "authorship_tag": "ABX9TyMqSS9c9H1bbg0EKqti9eEJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -710,9 +710,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MORy2sb-EKZG",
-        "outputId": "44da071b-a453-469c-a2f4-4c3bf42ad536"
+        "outputId": "d57ce611-189a-4692-b7a2-8914c2c06f75"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,9 +756,9 @@
           "height": 423
         },
         "id": "v9eVzqA-EYjV",
-        "outputId": "7d6c3185-8d3e-4143-8dee-132039beddd5"
+        "outputId": "bbdec8ca-4ab8-4452-db54-77f8ffd6c04d"
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -769,9 +769,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: Decision Tree**\n",
+        "\n",
+        "Decision Tree, ou Árvore de Decisão em português, é um algoritmo de aprendizado supervisionado para Machine Learning, e pode ser usado tanto para classificação quanto para regressão.\n",
+        "\n",
+        "Uma Decision Tree é construída a partir de um processo de indução, que vai dividindo os dados em subconjuntos cada vez mais puros. Para selecionar os atributos que irão compor a árvore, são considerados o grau de entropia de um nó e a informação ganha a mais após um split.\n"
+      ],
+      "metadata": {
+        "id": "OcAHBYVWE0L2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Referências**\n",
+        "\n",
+        "[A visual introduction to machine learning](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/)"
+      ],
+      "metadata": {
+        "id": "SV8ml59eE2Ge"
+      }
     }
   ]
 }
