--- a/28_Decision_Trees.ipynb
+++ b/28_Decision_Trees.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqSS9c9H1bbg0EKqti9eEJ",
+      "authorship_tag": "ABX9TyOFk93XkEoBChelmMf8CIVX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -795,6 +795,25 @@
       ],
       "metadata": {
         "id": "SV8ml59eE2Ge"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra 2**\n",
+        "\n",
+        "Dando continuidade, após passarmos pelos modelos de regressão e classificação, vamos conhecer também métodos de clusterização e os tipos de problemas que eles atacam.\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Clustering in Machine Learning - Google Developers](https://developers.google.com/machine-learning/clustering/clustering-algorithms)\n",
+        "\n",
+        "[Clustering in Machine Learning - Geeks for Geeks](https://www.geeksforgeeks.org/clustering-in-machine-learning/)\n",
+        "\n",
+        "[The 5 Clustering Algorithms Every Data Scientist Need to Know - Towards Data Science](https://towardsdatascience.com/the-5-clustering-algorithms-data-scientists-need-to-know-a36d136ef68)"
+      ],
+      "metadata": {
+        "id": "R51IHDcAI7Fi"
       }
     }
   ]
