--- a/29_1_Detecção_de_Fraude_em_Cartões_de_Crédito.ipynb
+++ b/29_1_Detecção_de_Fraude_em_Cartões_de_Crédito.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+PjjQ/P5Hzul5wAqCk4oz",
+      "authorship_tag": "ABX9TyPO4U9+HzkUh2KX8wLzDVmD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,6 +207,62 @@
       ],
       "metadata": {
         "id": "_1gveGG7RgXw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **📖 Projeto - Detectando Fraudes em Cartões de Crédito**\n",
+        "\n",
+        "Saia agora da sua zona de conforto!\n",
+        "\n",
+        "Neste projeto, iremos abordar o problema das fraudes em cartões de crédito, uma das principais preocupações das instituições financeiras como bancos e fintechs. Apenas no Brasil, cerca de 12,1 milhões de pessoas já foram vítimas de algum tipo de fraude financeira no último ano. Traduzindo em valores, os golpes financeiros ultrapassaram a cifra de R$ 1,8 bilhão de prejuízo por ano para os últimos 12 meses.\n",
+        "\n",
+        "Neste projeto, iremos abordar o problema das fraudes em cartões de crédito, uma das principais preocupações das instituições financeiras como bancos e fintechs.\n",
+        "\n",
+        "Apenas no Brasil, cerca de 12,1 milhões de pessoas já foram vítimas de algum tipo de fraude financeira no último ano. Traduzindo em valores, os golpes financeiros ultrapassaram a cifra de R$ 1,8 bilhão de prejuízo por ano para os últimos 12 meses.\n",
+        "\n",
+        "Dentre essas fraudes, aquelas envolvendo cartões de crédito são de grande relevância uma vez que a sua não-detecção acarretará em prejuízos consideráveis, tanto para o consumidor quanto para a instituição financeira.\n",
+        "\n",
+        "Um outro fator a ser considerado é a quantidade de falsos positivos, ou seja, aquelas vezes em que você tentou fazer uma compra e teve seu cartão bloqueado preventivamente - o que provavelmente gerou estresse e constrangimento.\n",
+        "\n",
+        "Por todos esses motivos, o investimento na área de detecção de fraudes por meio de Inteligência Artificial vem crescendo a cada ano, representando uma grande oportunidade em Data Science.\n",
+        "\n",
+        "Dispondo de grandes volumes de dados como base histórica, um algoritmo de machine learning apenas um pouco melhor que os anteriores já representa uma economia de milhões de Reais. E esse é o desafio, aprimorar cada vez mais o uso de algoritmos visando inibir ou evitar transações fraudulentas.\n",
+        "\n",
+        "Você tem totais condições de fazer essa análise completa. Não tenha medo de errar ou arriscar. Também não se limite às instruções que eu passarei, fique a vontade para ir além.\n",
+        "\n",
+        "\n",
+        "\n",
+        "# **Instruções para Revisão do seu Projeto**\n",
+        "\n",
+        "Para os alunos que não se sentiram confiantes seguindo o nosso modelo, há a possibilidade de você submetê-lo para uma revisão.\n",
+        "\n",
+        "Caso você queira submeter seu projeto, siga as seguintes etapas.\n",
+        "\n",
+        "Publique o projeto no seu Github (não envie o link do Colab diretamente).\n",
+        "Envie um email para suporte@sigmoidal.ai com o assunto \"Projeto do Módulo 4 - Revisão\".\n",
+        "Aguarde a resposta ao seu email em até 2 dias úteis.\n",
+        "Atenção, não envie o projeto para qualquer outro email, direct ou Telegram, pois esses meios dificultam o nosso controle."
+      ],
+      "metadata": {
+        "id": "sdzAYEhFSTm5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Referências**\n",
+        "\n",
+        "\n",
+        "Projeto \"gabarito\" (apenas para referência)\n",
+        "\n",
+        "In Depth: Principal Component Analysis\n",
+        "\n",
+        "Credit Card Fraud Detection"
+      ],
+      "metadata": {
+        "id": "-WLSRZcOSikJ"
       }
     }
   ]
