--- a/30_Feature_Engineering.ipynb
+++ b/30_Feature_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUY5XCxqF4cfMuOYOadepH",
+      "authorship_tag": "ABX9TyML2a858R0chvRIx+9h7ZhR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2676,11 +2676,14 @@
       "source": [
         "# **Referências**\n",
         "\n",
-        "Notebook usado na aula\n",
-        "What is Feature Engineering for Machine Learning?\n",
+        "[What is Feature Engineering for Machine Learning?](https://medium.com/mindorks/what-is-feature-engineering-for-machine-learning-d8ba3158d97a)\n",
+        "\n",
         "Fundamental Techniques of Feature Engineering for Machine Learning\n",
+        "\n",
         "Discover Feature Engineering, How to Engineer Features and How to Get Good at It\n",
+        "\n",
         "Dados de imóveis em São Paulo\n",
+        "\n",
         "Dados do abrigo de animais abandonados"
       ],
       "metadata": {
