--- a/30_Feature_Engineering.ipynb
+++ b/30_Feature_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML2a858R0chvRIx+9h7ZhR",
+      "authorship_tag": "ABX9TyNQOo284sesN/XAg8BYTPYw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2678,13 +2678,13 @@
         "\n",
         "[What is Feature Engineering for Machine Learning?](https://medium.com/mindorks/what-is-feature-engineering-for-machine-learning-d8ba3158d97a)\n",
         "\n",
-        "Fundamental Techniques of Feature Engineering for Machine Learning\n",
+        "[Fundamental Techniques of Feature Engineering for Machine Learning](https://towardsdatascience.com/feature-engineering-for-machine-learning-3a5e293a5114)\n",
         "\n",
-        "Discover Feature Engineering, How to Engineer Features and How to Get Good at It\n",
+        "[Discover Feature Engineering, How to Engineer Features and How to Get Good at It](https://machinelearningmastery.com/discover-feature-engineering-how-to-engineer-features-and-how-to-get-good-at-it/)\n",
         "\n",
-        "Dados de imóveis em São Paulo\n",
+        "[Dados de imóveis em São Paulo](https://www.kaggle.com/datasets/argonalyst/sao-paulo-real-estate-sale-rent-april-2019)\n",
         "\n",
-        "Dados do abrigo de animais abandonados"
+        "[Dados do abrigo de animais abandonados](https://data.austintexas.gov/Health-and-Community-Services/Austin-Animal-Center-Outcomes/9t4d-g238/about_data)"
       ],
       "metadata": {
         "id": "oG_W2Fs7s5_A"
