--- a/31_Feature_Scaling.ipynb
+++ b/31_Feature_Scaling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVow492QBKNhASqgMuadG1",
+      "authorship_tag": "ABX9TyMvvl6++2qaNI4N/DrSSbIn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -903,6 +903,40 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: Feature Scaling**\n",
+        "\n",
+        "Nesta fase do curso, você provavelmente já teve vários insights de que variáveis em escalas diferentes podem impactar o seu modelo.\n",
+        "\n",
+        "Termos como padronização, normalização, mesma escala e magnitude são muito importantes para o cientista de dados. Dependendo do algoritmo que você escolher, o resultado pode ser muito prejudicado.\n",
+        "\n",
+        "A realidade é que sim, na esmagadora maioria das vezes, você vai lidar com variáveis de diferentes tipos e diferentes escalas. Aprofundar no tema dessa aula é importante. No entanto, não se limite apenas a este notebook ou àquilo que foi mencionado no vídeo.Use as referências e links!"
+      ],
+      "metadata": {
+        "id": "lI5NqOkTbY_I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Referências**\n",
+        "\n",
+        "\n",
+        "[About Feature Scaling and Normalization](https://sebastianraschka.com/Articles/2014_about_feature_scaling.html) (Sebastian Raschka)\n",
+        "\n",
+        "[Feature Scaling for Machine Learning: Understanding the Difference Between\n",
+        "Normalization vs. Standardization](https://www.analyticsvidhya.com/blog/2020/04/feature-scaling-machine-learning-normalization-standardization/)\n",
+        "\n",
+        "[Normalization vs Standardization — Quantitative analysis](https://towardsdatascience.com/normalization-vs-standardization-quantitative-analysis-a91e8a79cebf)\n",
+        "\n",
+        "[Compare the effect of different scalers on data with outliers](https://scikit-learn.org/stable/auto_examples/preprocessing/plot_all_scaling.html#sphx-glr-auto-examples-preprocessing-plot-all-scaling-py)"
+      ],
+      "metadata": {
+        "id": "dqGoRIw6biUr"
+      }
     }
   ]
 }
