--- a/33_Lidando_com_variáveis_categóricas.ipynb
+++ b/33_Lidando_com_variáveis_categóricas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyYiTpsj33Zgc5setDhkVz",
+      "authorship_tag": "ABX9TyOgQzvo1Xta7QgKF9LIyU2m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2383,6 +2383,38 @@
       },
       "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: Lidando com variáveis categóricas**\n",
+        "\n",
+        "Em machine learning, muitos modelos não conseguirão lidar diretamente com variáveis categóricas. Dessa maneira, é importante conhecer os principais métodos e saber como aplicá-los.\n",
+        "\n",
+        "Nesta aula veremos como usar o LabelEncoder e OneHotEncoder. Mais que isso, vou te mostrar algumas situações onde colunas numéricas são, na verdade, variáveis categóricas.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ld0vOd7KSrMi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Referências**\n",
+        "\n",
+        "\n",
+        "[Categorical encoding using Label-Encoding and One-Hot-Encoder](https://towardsdatascience.com/categorical-encoding-using-label-encoding-and-one-hot-encoder-911ef77fb5bd)\n",
+        "\n",
+        "[Choosing the right Encoding method-Label vs OneHot Encoder](https://towardsdatascience.com/choosing-the-right-encoding-method-label-vs-onehot-encoder-a4434493149b)\n",
+        "\n",
+        "[What are categorical variables in data science and how to encode them for machine learning](https://medium.com/swlh/what-are-categorical-variables-and-how-to-treat-in-machine-learning-fd078c09a9af)\n",
+        "\n",
+        "[Encoding Categorical Features](https://towardsdatascience.com/encoding-categorical-features-21a2651a065c)"
+      ],
+      "metadata": {
+        "id": "mcHdR24ySvfQ"
+      }
     }
   ]
 }
