--- a/34_XGBoost.ipynb
+++ b/34_XGBoost.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2uAsoxMavhVTU6uVi8mUz",
+      "authorship_tag": "ABX9TyM4qZKkIgMxkg2oBraXKWkM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -549,6 +549,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: XGBoost**\n",
+        "\n",
+        "XGBoost, que vem de EXtreme Gradient Boosting, pertence à classe das Árvores de Decisão. Este algoritmo vem ganhando espaço e se tornando um dos mais usados em competições do Kaggle, e é uma referência em precisão e acurácia.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "y6ZoOqpRU_sO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Referências**\n",
+        "\n",
+        "[Documentação XGBoost](https://xgboost.readthedocs.io/en/latest/)\n",
+        "\n",
+        "[Gentle introduction to XGBoost](https://machinelearningmastery.com/gentle-introduction-xgboost-applied-machine-learning/)"
+      ],
+      "metadata": {
+        "id": "4iiH3X0rVD_n"
+      }
     }
   ]
 }
