--- a/35_Cross_validation.ipynb
+++ b/35_Cross_validation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1irHO1SlHcHHOmq7rNQBj",
+      "authorship_tag": "ABX9TyPNehjT50t1j+ipwTX3KLKA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "_etVBhKBnHnA"
       },
@@ -85,6 +85,137 @@
         "\n",
         "# importar o arquivo\n",
         "df = pd.read_csv(\"http://dl.dropboxusercontent.com/s/6d91j46mkcdj4qv/heart-disease-clean.csv?dl=1\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. escolher e importar um modelo\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn import metrics\n",
+        "\n",
+        "# 2. Instanciar e escolher os hyperparameters\n",
+        "model = LogisticRegression()\n",
+        "\n",
+        "# 3. Separar os dados entre feature matrix e target vector\n",
+        "X = df.drop('num', axis=1)\n",
+        "y = df['num']\n",
+        "\n",
+        "# 3.1 Dividir o dataset entre treino e teste\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+        "\n",
+        "# 3.2 Padronizar os dados de treino\n",
+        "scaler = StandardScaler().fit(X_train)\n",
+        "X_train_transformed = scaler.transform(X_train)\n",
+        "\n",
+        "# 4. Cross-validation\n",
+        "scores = cross_val_score(model, X_train_transformed, y_train, cv=5)\n",
+        "\n",
+        "print(\"scores: \", scores)\n",
+        "print(\"Acurácia: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wSsyej8_okXn",
+        "outputId": "acd1a3f1-b353-4257-fc3f-b7b232607c58"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "scores:  [0.80434783 0.84782609 0.82222222 0.84444444 0.86666667]\n",
+            "Acurácia: 0.84 (+/- 0.04)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Acima, você pode ver o score médio e o intervalo de confiança de 95%.\n",
+        "\n",
+        "Por padrão, o score é computado de acordo com o método de score do próprio estimador. No entanto, é possível escolher outra métrica mais alinhada com a realidade do seu dataset.\n",
+        "\n",
+        "Para conhecer as métricas possíveis, [acesse este link](https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter)."
+      ],
+      "metadata": {
+        "id": "EHovlZPZopyD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = cross_val_score(model, X_train_transformed, y_train, cv=5, scoring=\"f1\")\n",
+        "print(\"scores: \", scores)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Arm1Xr5JosYT",
+        "outputId": "c80ef0f5-1732-4d4a-a2e8-2778e0538245"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "scores:  [0.79069767 0.82051282 0.78947368 0.78787879 0.85714286]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Aqui eu quero chamar a atenção para uma coisa. Repare que no primeiro modelo, fizemos a padronização do nosso `X_train_transformed = scaler.transform(X_train)` e somente após usamos a técnica de cross-validation.\n",
+        "\n",
+        "Vou explicar o motivo dessa não ser uma prática adequada. Veja na imagem abaixo que a cada rodada do nosso k-fold (técnica básica de cross-validation), o subconjunto em azul é deixado como \"teste\".\n",
+        "\n",
+        "<center><img alt=\"Colaboratory logo\" width=\"40%\" src=\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/img/grid_search_cross_validation.png\"></center>\n",
+        "\n",
+        "Isso não é ideal, pois queremos simular uma condição onde nosso modelo de machine learning nunca tenha visto esse subconjunto.\n",
+        "\n",
+        "Essa etapa de padronização ou qualquer outra de pré-processamento, pode ser estruturada com um `pipeline`."
+      ],
+      "metadata": {
+        "id": "wm3bDwiqo2ba"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.pipeline import make_pipeline\n",
+        "\n",
+        "model = make_pipeline(StandardScaler(), LogisticRegression())\n",
+        "scores = cross_val_score(model, X_train, y_train, cv=5)\n",
+        "\n",
+        "print(\"scores: \", scores)\n",
+        "print(\"Acurácia: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ixmUxM7Ao4wS",
+        "outputId": "3d2e97e3-ce28-4850-c647-d6d40f8608e9"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "scores:  [0.80434783 0.84782609 0.82222222 0.84444444 0.86666667]\n",
+            "Acurácia: 0.84 (+/- 0.04)\n"
+          ]
+        }
       ]
     }
   ]
