--- a/35_Cross_validation.ipynb
+++ b/35_Cross_validation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNehjT50t1j+ipwTX3KLKA",
+      "authorship_tag": "ABX9TyPO1vow17zFK0A+2NvKhluV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,6 +217,45 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Cross Validation**\n",
+        "\n",
+        "Como eu comentei na última aula, você não pode assumir que o seu modelo está bom apenas olhando os dados de treino e teste.\n",
+        "\n",
+        "\n",
+        "A filosofia que você deve ter na cabeça é que o primeiro contato de um modelo de machine learning com dados de teste, deve ocorrer apenas na última etapa do processo.\n",
+        "\n",
+        "Dentre todos os fatores que nos levam a chegar a essa conclusão, estão os fatos que usar datasets de testes para ajustes, levarão a um provável overfitting e carregarão um bias (viés).\n",
+        "\n",
+        "<center><img alt=\"Colaboratory logo\" width=\"40%\" src=\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/img/grid_search_cross_validation.png\"></center>\n",
+        "\n",
+        "Assim, para que você possa aprender os parâmetros de um modelo e preservar os dados de teste, mostrarei a técnica de cross-validation.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "UDsDHNh8pwQS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Referências**\n",
+        "\n",
+        "\n",
+        "[Cross Validation — Why & How](https://towardsdatascience.com/cross-validation-430d9a5fee22)\n",
+        "\n",
+        "Cross-validation: evaluating estimator performance\n",
+        "\n",
+        "Metrics and scoring: quantifying the quality of predictions\n",
+        "\n",
+        "Pipelines and composite estimators"
+      ],
+      "metadata": {
+        "id": "YeMaeba6qHMK"
+      }
     }
   ]
 }
