--- a/35_Cross_validation.ipynb
+++ b/35_Cross_validation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO1vow17zFK0A+2NvKhluV",
+      "authorship_tag": "ABX9TyMD6B/WIWJe2Sj7JImGLbjg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,11 +247,11 @@
         "\n",
         "[Cross Validation — Why & How](https://towardsdatascience.com/cross-validation-430d9a5fee22)\n",
         "\n",
-        "Cross-validation: evaluating estimator performance\n",
+        "[Cross-validation: evaluating estimator performance](https://scikit-learn.org/stable/modules/cross_validation.html#cross-validation-and-model-selection)\n",
         "\n",
-        "Metrics and scoring: quantifying the quality of predictions\n",
+        "[Metrics and scoring: quantifying the quality of predictions](https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter)\n",
         "\n",
-        "Pipelines and composite estimators"
+        "[Pipelines and composite estimators](https://scikit-learn.org/stable/modules/compose.html#combining-estimators)"
       ],
       "metadata": {
         "id": "YeMaeba6qHMK"
