--- a/36_Grid_Search.ipynb
+++ b/36_Grid_Search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0gxAR0NFBzEHb8aU4/vpm",
+      "authorship_tag": "ABX9TyPg6OOloWw//MOP9mn/lsXE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -305,9 +305,9 @@
         "\n",
         "[Tuning the hyper-parameters of an estimator](https://scikit-learn.org/stable/modules/grid_search.html)\n",
         "\n",
-        "Parameter estimation using grid search with cross-validation\n",
+        "[Parameter estimation using grid search with cross-validation](https://scikit-learn.org/stable/auto_examples/model_selection/plot_grid_search_digits.html#sphx-glr-auto-examples-model-selection-plot-grid-search-digits-py)\n",
         "\n",
-        "Model selection: choosing estimators and their parameters"
+        "[Model selection: choosing estimators and their parameters](https://colab.research.google.com/drive/1MULiEX43y3MpI4mNpo68QULuJMSrAfW7#scrollTo=cdXMG8EEvnmb)"
       ],
       "metadata": {
         "id": "cdXMG8EEvnmb"
