--- a/36_2_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
+++ b/36_2_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuRXKpJ4y2Yaxxolsp7RAh",
+      "authorship_tag": "ABX9TyOsT5vksJtQY6rCnLQe6EiZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2674,7 +2674,7 @@
         "\n",
         "[Handling class imbalance in customer churn prediction](https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.477.1151&rep=rep1&type=pdf)\n",
         "\n",
-        "Checklist para projetos de Data Science"
+        "[Checklist para projetos de Data Science](https://colab.research.google.com/drive/174uWepnDtvn3okE2KnK2_Zvg2DFmRKVH?usp=sharing)"
       ],
       "metadata": {
         "id": "FgsOR34YQVWO"
