--- a/36_3_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
+++ b/36_3_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUyhV4ZgYB28Ovz6spjvzO",
+      "authorship_tag": "ABX9TyO9Y0Vb1uvZmnPluwW1qG0e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1949,11 +1949,11 @@
         "score_baseline = val_model(X_train, y_train, rf)"
       ],
       "metadata": {
-        "id": "6mHk6HSkD9Nk",
-        "outputId": "ea12dc7c-0f0f-44db-91c6-73b723555073",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6mHk6HSkD9Nk",
+        "outputId": "ea12dc7c-0f0f-44db-91c6-73b723555073"
       },
       "execution_count": 16,
       "outputs": [
@@ -2038,12 +2038,12 @@
         "pd.DataFrame(data=recall, index=model, columns=['Recall'])"
       ],
       "metadata": {
-        "id": "LWugu1vREtOl",
-        "outputId": "420a5f7f-76d0-40fc-e137-31c4d28d6663",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 876
-        }
+        },
+        "id": "LWugu1vREtOl",
+        "outputId": "420a5f7f-76d0-40fc-e137-31c4d28d6663"
       },
       "execution_count": 18,
       "outputs": [
@@ -2392,6 +2392,95 @@
       ],
       "metadata": {
         "id": "bOci8QkgFbg_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xgb = XGBClassifier(learning_rate=0.1)\n",
+        "\n",
+        "param_grid = {\n",
+        " 'n_estimators':range(0,1000,50),\n",
+        "}\n",
+        "\n",
+        "# identificar melhor parâmetro\n",
+        "kfold = StratifiedKFold(n_splits=10, shuffle=True)\n",
+        "grid_search = GridSearchCV(xgb, param_grid, scoring=\"recall\", n_jobs=-1, cv=kfold)\n",
+        "grid_result = grid_search.fit(X_train_rus, y_train_rus)\n",
+        "\n",
+        "# ver resultados\n",
+        "print(\"Melhor: {} para {}\".format(grid_result.best_score_, grid_result.best_params_))"
+      ],
+      "metadata": {
+        "id": "6_EgicuBF-Ia",
+        "outputId": "124e6ad0-5198-4048-86ef-8eecbadacf57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Melhor: 0.781294964028777 para {'n_estimators': 50}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Com o número de estimadores igual a 50, realizarei a busca pelos parâmtros `max_depth` e `min_child_weight`."
+      ],
+      "metadata": {
+        "id": "TGOLQDQhHTPP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xgb = XGBClassifier(learning_rate=0.1, n_estimators=50)\n",
+        "\n",
+        "param_grid = {\n",
+        " 'max_depth':range(1,8,1),\n",
+        " 'min_child_weight':range(1,5,1)\n",
+        "}\n",
+        "\n",
+        "# identificar melhor parâmetro\n",
+        "kfold = StratifiedKFold(n_splits=10, shuffle=True)\n",
+        "grid_search = GridSearchCV(xgb, param_grid, scoring=\"recall\", n_jobs=-1, cv=kfold)\n",
+        "grid_result = grid_search.fit(X_train_rus, y_train_rus)\n",
+        "\n",
+        "# ver resultados\n",
+        "print(\"Melhor: {} para {}\".format(grid_result.best_score_, grid_result.best_params_))"
+      ],
+      "metadata": {
+        "id": "vApzRwbOHVRV",
+        "outputId": "d94eb644-5dd6-44dc-ab5f-bdb7e9a5ebad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Melhor: 0.8237410071942446 para {'max_depth': 1, 'min_child_weight': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Obtidos os valores de `max_depth=1` e `min_child_weight=1`, irei otimizar o parâmetro `gamma`."
+      ],
+      "metadata": {
+        "id": "ytcxRyYRHd-O"
       }
     }
   ]
