--- a/36_3_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
+++ b/36_3_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEMb+fc3LqdHkGC8STukC8",
+      "authorship_tag": "ABX9TyOLhAYKUUm04J6/B3eBEjJ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2501,11 +2501,11 @@
         "print(\"Melhor: {} para {}\".format(grid_result.best_score_, grid_result.best_params_))"
       ],
       "metadata": {
-        "id": "Q6XXmU3GHmgl",
-        "outputId": "fe2df2fe-db69-4990-a58f-65a093768482",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q6XXmU3GHmgl",
+        "outputId": "fe2df2fe-db69-4990-a58f-65a093768482"
       },
       "execution_count": 22,
       "outputs": [
@@ -2545,11 +2545,11 @@
         "print(\"Melhor: {} para {}\".format(grid_result.best_score_, grid_result.best_params_))"
       ],
       "metadata": {
-        "id": "dDLEuLU4HqvM",
-        "outputId": "c8ecabf6-c5d3-4a9c-c53e-c069c7abfd52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dDLEuLU4HqvM",
+        "outputId": "c8ecabf6-c5d3-4a9c-c53e-c069c7abfd52"
       },
       "execution_count": 21,
       "outputs": [
@@ -2595,12 +2595,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "C2r6JNz_HzBX",
-        "outputId": "d51f8922-294d-4dd0-81f2-1a5da26d2490",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 663
-        }
+        },
+        "id": "C2r6JNz_HzBX",
+        "outputId": "d51f8922-294d-4dd0-81f2-1a5da26d2490"
       },
       "execution_count": 23,
       "outputs": [
@@ -2646,6 +2646,32 @@
       ],
       "metadata": {
         "id": "yUbb1GHhH3JU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **👨‍🏫Extra: Meu Projeto de Churn Prediction**\n",
+        "\n",
+        "Nesta aula eu quero te passar alguns insights e como eu estruturei meu projeto deste módulo: um churn predictor.\n",
+        "\n",
+        "Tenha em mente que não é um gabarito ou uma versão 100% correta, mas é a minha versão. Você pode ter suas premissas ou hipóteses. Até mesmo a sua métrica de avaliação pode ser diferente."
+      ],
+      "metadata": {
+        "id": "R9OcTzQsIT0d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Referências**\n",
+        "\n",
+        "[Complete Guide to Parameter Tuning in XGBoost with codes in Python](https://www.analyticsvidhya.com/blog/2016/03/complete-guide-parameter-tuning-xgboost-with-codes-python/)\n",
+        "\n",
+        "How to Tune the Number and Size of Decision Trees with XGBoost in Python"
+      ],
+      "metadata": {
+        "id": "_KsKyB6hIX1R"
       }
     }
   ]
