--- a/36_3_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
+++ b/36_3_PROJETO_Churn_Prediction_para_uma_empresa_de_Telecomunicações.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLhAYKUUm04J6/B3eBEjJ5",
+      "authorship_tag": "ABX9TyP73RuR60yhpkT2vRaXjxYu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2668,7 +2668,7 @@
         "\n",
         "[Complete Guide to Parameter Tuning in XGBoost with codes in Python](https://www.analyticsvidhya.com/blog/2016/03/complete-guide-parameter-tuning-xgboost-with-codes-python/)\n",
         "\n",
-        "How to Tune the Number and Size of Decision Trees with XGBoost in Python"
+        "[How to Tune the Number and Size of Decision Trees with XGBoost in Python](https://machinelearningmastery.com/tune-number-size-decision-trees-xgboost-python/)"
       ],
       "metadata": {
         "id": "_KsKyB6hIX1R"
